update new year resolution

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -52,11 +52,11 @@ tags:
 - week12 ✔️ Bible 0101111 Pray 1111111
 - week13 ✔️ Bible 1111111 Pray 1111101
 - week14 ✔️ Bible 1110101 Pray 1111111
-- week15
-- week16
-- week17
-- week18
-- week19
+- week15 ✔️ Bible 1101101 Pray 1110100
+- week16 ✔️ Bible 1111101 Pray 1110111
+- week17 🔴 Bible ?????? Pray ??????1
+- week18 🔴 Bible 111100 Pray 11100??
+- week19 Bible 1110 Pray 011
 - week20
 - week21
 - week22
@@ -112,11 +112,11 @@ tags:
 - week12 ✔️ 跑步 0000101
 - week13 🔴 跑步 000100 体重快140了，报警！
 - week14 ✔️ 跑步 0011010
-- week15 
-- week16 
-- week17 
-- week18 
-- week19 
+- week15 ✔️ 跑步 1100000，颈椎病犯了，还是多游泳吧，更安全。
+- week16 ✔️ 跑步 00000
+- week17 🔴 跑步 00001
+- week18 ✔️ 跑步 11100
+- week19 ✔️ 跑步 001
 - week20 
 - week21 
 - week22 
@@ -157,13 +157,13 @@ tags:
 ## Family
 
 1. 学开车，拿到驾照，这条是2019年的遗愿。
-  - week
-  - week
-  - week
-  - week
-  - week
-  - week
-  - week
+  - week15 ✔️ 开始练车了！碰到个非常好的教练，不说脏话，非常耐心。
+  - week16 🔴 no progress
+  - week17 ✔️ Tuesday
+  - week18 🔴 no progress
+  - week19 ✔️ 周一学会侧方停车，周二学会坡道停车+S弯+窄路掉头
+  - week20
+  - week21
 
 2. 保持财务健康。
 	- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
@@ -193,6 +193,7 @@ tags:
 7. 探索：教沐沐识字
 	- week5 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
 	- week10 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
+	- week16 下载软件洪恩识字，沐沐非常喜欢边玩边学，付费1年。
 
 
 ---
@@ -215,11 +216,11 @@ tags:
 - week12 🔴 failed
 - week13 ✔️ attend team meeting / watch CNN/ABC/WSJ news everyday / short meeting with Aaron about RaceTac
 - week14 ✔️ elaboration meeting of WOTC / Janina +2 /
-- week15 
-- week16 
-- week17 
-- week18 
-- week19 
+- week15 🔴 team meeting
+- week16 🔴 team meeting
+- week17 🔴 team meeting
+- week18 🔴 team meeting
+- week19 🔴 team meeting
 - week20 
 - week21 
 - week22 
@@ -275,6 +276,8 @@ tags:
 - week5 ✔️ Short Link service / Build a Jenkins
 - week8 ✔️ Enable HTTP/2 / NewRelic SPA monitoring
 - week12 ✔️ change phone number (a small frontend task)
+- week16 ✔️ implement a gem [beta_feature](https://github.com/helloworld1812/beta_feature) as [feature flag](https://martinfowler.com/articles/feature-toggles.html).
+- wee17-19 ✔️ WOTC
 
 **2.考个 AWS Certified Solutions Architect 证书。**
 
@@ -291,7 +294,11 @@ tags:
 - week12 🔴 no progress
 - week13 🔴 no progress
 - week14 🔴 no progress
-- week15
+- week15 ✔️ 开始上 udemy 的课程
+- week16 ✔️ 上了2节 udemy 的课程
+- week17-18 🔴 no progress
+- week19 ✔️ [Udemy: Ultimate AWS Certified Solutions Architect Associate 2020](https://www.udemy.com/share/102CPBAEMadldSRn8J/) Chapter 1-27
+
 
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
 
@@ -303,9 +310,11 @@ tags:
 - week12 ✔️ JS prototype
 - week13 ✔️ this / apply, call, binding
 - week14 ✔️ this / new
-- week15
-
-
+- week15 🔴 no progress
+- week16 🔴 no progress
+- week17 🔴 no progress
+- week18 🔴 no progress
+- 
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
 
 这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。听听他们对这个世界的看法，兼听则明。
@@ -313,8 +322,8 @@ tags:
 - Jan. Talk with Sam Qiu. ✔️
 - Feb. Had a podcast with Python 大妈 & 张烁 ✔️
 - Mar. 🔴 failed
-- Apr.
-- May.
+- Apr. 🔴 failed 
+- May. 2020-05-06 和锦森闲扯家常，他成家立业了。
 - June.
 - July.
 - Aug.
@@ -355,7 +364,7 @@ tags:
   - 2020-03-07《教孩子管理金钱》✔️
   - 2020-03-13 《吕小荣的股票交易原则》✔️
 	  - 文章名字起的不好，自己又不是啥投资名人，who care 
-  - Apr.
+  - Apr. 🔴 no progress
   - May.
   - June.
   - July.
@@ -403,7 +412,7 @@ tags:
   - Jan. 🔴 failed due to COVID-19
   - Feb. 🔴 failed due to COVID-19
   - Mar. 🔴 failed due to COVID-19
-  - Apr.
+  - Apr. 🔴 failed
   - May.
   - June.
   - July.
@@ -419,7 +428,7 @@ tags:
 4. 和教会的 Vincent 聊聊天，或许可以请他来家里吃饭，不做硬性计划，聊到哪算哪。
 
 	- 2020-01-13 ✔️ 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。
-	
+	- 2020-05-03 ✔️ 在滨江大道散步
 ---
 
 ## 计划外事情
