fix security alert

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -323,7 +323,7 @@ tags:
 - Feb. Had a podcast with Python 大妈 & 张烁 ✔️
 - Mar. 🔴 failed
 - Apr. 🔴 failed 
-- May. 2020-05-06 和锦森闲扯家常，他成家立业了。
+- May. 2020-05-06 和锦森闲扯家常，他成家了。
 - June.
 - July.
 - Aug.
