--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -277,7 +277,19 @@ tags:
 - week8 ✔️ Enable HTTP/2 / NewRelic SPA monitoring
 - week12 ✔️ change phone number (a small frontend task)
 - week16 ✔️ implement a gem [beta_feature](https://github.com/helloworld1812/beta_feature) as [feature flag](https://martinfowler.com/articles/feature-toggles.html).
-- wee17-19 ✔️ WOTC
+- wee17 ✔️ WOTC
+- week18 ✔️ ruby gem: beta_feature
+- week19
+- week20
+- week21
+- week22 
+- week23 
+- week24 
+- week25 
+- week26 
+- week27
+- week28
+- week29 
 
 **2.考个 AWS Certified Solutions Architect 证书。**
 
@@ -297,7 +309,7 @@ tags:
 - week15 ✔️ 开始上 udemy 的课程
 - week16 ✔️ 上了2节 udemy 的课程
 - week17-18 🔴 no progress
-- week19 ✔️ [Udemy: Ultimate AWS Certified Solutions Architect Associate 2020](https://www.udemy.com/share/102CPBAEMadldSRn8J/) Chapter 1-27
+- week19 ✔️ [Udemy AWS Course](https://www.udemy.com/share/102CPBAEMadldSRn8J/) Chapter 1-27
 
 
 **3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
@@ -314,7 +326,18 @@ tags:
 - week16 🔴 no progress
 - week17 🔴 no progress
 - week18 🔴 no progress
-- 
+- week19
+- week20
+- week21
+- week22 
+- week23 
+- week24 
+- week25 
+- week26 
+- week27
+- week28
+- week29 
+
 **4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
 
 这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。听听他们对这个世界的看法，兼听则明。
@@ -334,11 +357,21 @@ tags:
 
 **5.提高自己远程办公的能力**
 
+Objective
+
 - 规律的作息
 - 充足的睡眠
 - 强壮的身体
 - 合理的时间分配，平衡好 Faith / Health / Family / Work / Church 5 个 buckets。
 
+远程办公作息表
+
+- 7:00 起床
+- 20:00-21:00 跑步 & 拉伸 (晚饭要少吃一点，这样跑步才不会胃难受）
+- 21:30-22:00 吕蓝文祷告会
+- 22:30-23:00 睡觉
+	
+	
 
 **6.业余爱好探索**
 
