--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -156,44 +156,53 @@ tags:
 
 ## Family
 
-1. 学开车，拿到驾照，这条是2019年的遗愿。
-  - week15 ✔️ 开始练车了！碰到个非常好的教练，不说脏话，非常耐心。
-  - week16 🔴 no progress
-  - week17 ✔️ Tuesday
-  - week18 🔴 no progress
-  - week19 ✔️ 周一学会侧方停车，周二学会坡道停车+S弯+窄路掉头
-  - week20
-  - week21
+### 1.拿到驾照
 
-2. 保持财务健康。
-	- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
-	- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
-	- 交易原则 ✔️ 
-		- Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
-		- Rule2: 以后不再向别人推荐 ETF和股票，涨涨跌跌，勾人心魂，太害人了。
-		- 若违背以上原则，刘小坤重重的用管教杖责打二次。
+学开车，这条是2019年的遗愿。
 
-3. 每个季度回济南看望爷爷奶奶和爸爸妈妈
-    - Quarter 1 ✔️
-    - Quarter 2
-    - Quarter 3
-    - Quarter 4
+- week15 ✔️ 开始练车了！碰到个非常好的教练，不说脏话，非常耐心。
+- week16 🔴 no progress
+- week17 ✔️ Tuesday
+- week18 🔴 no progress
+- week19 ✔️ 周一学会侧方停车，周二学会坡道停车+S弯+窄路掉头
+- week20
+- week21
+
+### 2.保持财务健康
+
+- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
+- 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
+- 交易原则 ✔️ 
+	- Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
+	- Rule2: 以后不再向别人推荐 ETF和股票，涨涨跌跌，勾人心魂，太害人了。
+	- 若违背以上原则，刘小坤重重的用管教杖责打二次。
+
+### 3.每个季度回济南看望爷爷奶奶和爸爸妈妈
+
+- Quarter 1 ✔️
+- Quarter 2
+- Quarter 3
+- Quarter 4
 
 
-3. 教沐沐英文
-  - 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）
-	  - 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min ✔️ 
+### 3.教沐沐英文
 
-4. 探索: 教沐沐打字
+- 有没有什么办法可以让全家人的英文水平都提高上去？（出国旅游除外）
+  - 每天给沐沐看 YouTube Kid，上午 40min, 下午 40min, 晚上 10min ✔️ 
 
-5. 探索: 教沐沐编程（或许可以先从逻辑开始）
+### 4.探索: 教沐沐打字
 
-6. 探索: 邀请沐沐的好朋友来家里做客
+### 5.探索: 教沐沐编程
 
-7. 探索：教沐沐识字
-	- week5 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
-	- week10 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
-	- week16 下载软件洪恩识字，沐沐非常喜欢边玩边学，付费1年。
+（或许可以先从逻辑开始）
+
+### 6.探索: 邀请沐沐的好朋友来家里做客
+
+### 7.探索：教沐沐识字
+
+- week5 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
+- week10 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
+- week16 下载软件洪恩识字，沐沐非常喜欢边玩边学，每天玩半个小时，认识4-6个字。
 
 
 ---
@@ -255,11 +264,13 @@ tags:
 - week51 
 - week52 
 
+
+
 ---
 
 ## Work
 
-**1.成就 Workstream, 也让它成就自己。**
+### 1.成就 Workstream, 也让它成就自己。
 
 在薄荷的时候，有 CTO 亲自带着我，我在他搭的架子下完成各个组件(microservice) 的开发。在 SAP Jam 的时候，温哥华的架构师敲定技术选型。整个职业生涯，我都被"保护"的很好。
 
@@ -271,13 +282,14 @@ tags:
 - 能不能写好 Golang / Python / JavaScript?
 - 能不能承载2000万的流量?
 
+
 激动人心且充满压力。
 
 - week5 ✔️ Short Link service / Build a Jenkins
 - week8 ✔️ Enable HTTP/2 / NewRelic SPA monitoring
 - week12 ✔️ change phone number (a small frontend task)
 - week16 ✔️ implement a gem [beta_feature](https://github.com/helloworld1812/beta_feature) as [feature flag](https://martinfowler.com/articles/feature-toggles.html).
-- wee17 ✔️ WOTC
+- week17 ✔️ WOTC
 - week18 ✔️ ruby gem: beta_feature
 - week19
 - week20
@@ -291,7 +303,9 @@ tags:
 - week28
 - week29 
 
-**2.考个 AWS Certified Solutions Architect 证书。**
+
+
+### 2.考个 AWS Certified Solutions Architect 证书。
 
 我应该会继续在外企这条路上干下去，了解 AWS 生态绝对很有必要，学习的过程中可以顺便考个证。一来检验自己的学习成果，二来履历好看一些。
 
@@ -312,7 +326,11 @@ tags:
 - week19 ✔️ [Udemy AWS Course](https://www.udemy.com/share/102CPBAEMadldSRn8J/) Chapter 1-27
 
 
-**3.打磨前端能力，达到初级前端程序员的水平**。比如，能马马虎虎的写个小网站。
+
+
+### 3.打磨前端能力，达到初级前端程序员的水平。
+
+比如，能马马虎虎的写个小网站。
 
 - week6 ✔️ learn React
 - week7 ✔️ ant design / router / redux / Dva
@@ -338,7 +356,9 @@ tags:
 - week28
 - week29 
 
-**4.每个月和一个老朋友打电话（或吃饭），叙叙旧。**
+
+
+### 4.每个月和一个老朋友打电话（或吃饭），叙叙旧。
 
 这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。听听他们对这个世界的看法，兼听则明。
 
@@ -355,7 +375,9 @@ tags:
 - Nov.
 - Dec.
 
-**5.提高自己远程办公的能力**
+
+
+### 5.提高自己远程办公的能力
 
 Objective
 
@@ -373,39 +395,38 @@ Objective
 	
 	
 
-**6.业余爱好探索**
+### 6.业余爱好探索
 
 - 组织 Ruby 上海地区的线下聚会
 
 - 参与到开源项目 TiDB 数据库中
-  - 学习 TiDB 的开源文化和组织形式
-  - 参加 Meetup
-  - 加入 TiDB Working Group (optional)
-
+	- 学习 TiDB 的开源文化和组织形式
+	- 参加 Meetup
+	- 加入 TiDB Working Group (optional)
 - 一个月写一篇公众号文章，熟悉一下微信公众号可以做什么。
-  - Jan 《远程办公：如何提高自己的自制力》✔️
-	  - 学会开白名单
-	  - 被 CSDN/51job/开智/进退学说转载
-	  - 无意蹭了热点远程办公。
-  - 2020-02-11 《远程办公：如何边工作，边带孩子？》✔️
-	  - 学会设置"所有人都可以留言"
-	  - 打赏
-	  - 流量主
-	  - 商品推广
-  - 2020-02-29《远程办公：如何招聘有自驱力的员工？》✔️
-	  - 找准定位 soho / programming/ remote worker
-  - 2020-03-07《教孩子管理金钱》✔️
-  - 2020-03-13 《吕小荣的股票交易原则》✔️
-	  - 文章名字起的不好，自己又不是啥投资名人，who care 
-  - Apr. 🔴 no progress
-  - May.
-  - June.
-  - July.
-  - Aug.
-  - Sept.
-  - Oct.
-  - Nov.
-  - Dec.
+	- Jan 《远程办公：如何提高自己的自制力》✔️
+		- 学会开白名单
+		- 被 CSDN/51job/开智/进退学说转载
+		- 无意蹭了热点远程办公。
+	- 2020-02-11 《远程办公：如何边工作，边带孩子？》✔️
+		- 学会设置"所有人都可以留言"
+		- 打赏
+		- 流量主
+		- 商品推广
+	- 2020-02-29《远程办公：如何招聘有自驱力的员工？》✔️
+		- 找准定位 soho / programming/ remote worker
+	- 2020-03-07《教孩子管理金钱》✔️
+	- 2020-03-13 《吕小荣的股票交易原则》✔️
+		- 文章名字起的不好，自己又不是啥投资名人，who care 
+	- Apr. 🔴 no progress
+	- May.
+	- June.
+	- July.
+	- Aug.
+	- Sept.
+	- Oct.
+	- Nov.
+	- Dec.
 
 - 欧阳志平邀请的公开课：Anki
 
@@ -426,45 +447,59 @@ Objective
 
 ## Church
 
-1. **开放家庭**，每月请弟兄姐妹/朋友/同事来家里聚餐。我太太喜爱安静，一开始以为她会反感，结果多虑了，她喜欢招待那些关系亲密的朋友。
+### 1.开放家庭
 
-    - 2020-01-01 ✔️ 宜山小组元旦聚餐 
-    - 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
-    - 2020-03-28 ✔️ 疫情解除，请小蓝夫妇/若郎/向文来家里吃火锅。
-    - 2020-04-04 ✔️ 晓晓，向文，若郎来我家过生日，三个人居然生在一周，难得。坤叔一家，Sara 也来了。
-    - May.
-    - June.
-    - July.
-    - Aug.
-    - Sept.
-    - Oct.
-    - Nov.
-    - Dec.
+每月请弟兄姐妹/朋友/同事来家里聚餐。我太太喜爱安静，一开始以为她会反感，结果多虑了，她喜欢招待那些关系亲密的朋友。
+  
+- 2020-01-01 ✔️ 宜山小组元旦聚餐 
+- 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
+- 2020-03-28 ✔️ 疫情解除，请小蓝夫妇/若郎/向文来家里吃火锅。
+- 2020-04-04 ✔️ 晓晓，向文，若郎来我家过生日，三个人居然生在一周，难得。坤叔一家，Sara 也来了。
+- May.
+- June.
+- July.
+- Aug.
+- Sept.
+- Oct.
+- Nov.
+- Dec.
 
-2. 在自己社交能力范围之内，每月去拜访一个弟兄姐妹/朋友/同事。<!-- 如果他们有需要，就提供帮助。-->
-  - Jan. 🔴 failed due to COVID-19
-  - Feb. 🔴 failed due to COVID-19
-  - Mar. 🔴 failed due to COVID-19
-  - Apr. 🔴 failed
-  - May.
-  - June.
-  - July.
-  - Aug.
-  - Sept.
-  - Oct.
-  - Nov.
-  - Dec.
 
-3. 在教会继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。
-	- week5 因为疫情，无法聚会。培训教会同工使用 Zoom 来主持周日敬拜。
+### 2.在自己社交能力范围之内，每月去拜访一个弟兄姐妹/朋友/同事。
 
-4. 和教会的 Vincent 聊聊天，或许可以请他来家里吃饭，不做硬性计划，聊到哪算哪。
+<!-- 如果他们有需要，就提供帮助。-->
 
-	- 2020-01-13 ✔️ 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。
-	- 2020-05-03 ✔️ 在滨江大道散步
+- Jan. 🔴 failed due to COVID-19
+- Feb. 🔴 failed due to COVID-19
+- Mar. 🔴 failed due to COVID-19
+- Apr. 🔴 failed
+- May.
+- June.
+- July.
+- Aug.
+- Sept.
+- Oct.
+- Nov.
+- Dec.
+	
+### 3.在教会的服侍
+
+继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。  
+
+- week5 因为疫情，无法聚会。培训教会同工使用 Zoom 来主持周日敬拜。
+
+### 4.和教会的 Vincent 聊聊天
+
+可以请他来家里吃饭，不做硬性计划，聊到哪算哪。 
+
+- 2020-01-13 ✔️ 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。
+- 2020-05-03 ✔️ 在滨江大道散步
+
+2020 年能做到 70% 就算圆满完成任务了。为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
+
 ---
 
-## 计划外事情
+**计划外事情**
 
 - week4 ✔️ 读完《欲罢不能》
 - week6 ✔️ 低吸中证500和盈富基金，押注 Gilead Sciences
@@ -472,10 +507,7 @@ Objective
 
 ---
 
-2020 年能做到 70% 就算圆满完成任务了。为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
-
-
-## 感概
+**感概**
 
 毕业工作八年了，有六年都做了年度计划。每年复盘时发现 80% 都能完成，也在按照计划推进，但人生轨迹的关键转折点都是巧合。
 
