--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -56,7 +56,7 @@ tags:
 - week16 ✔️ Bible 1111101 Pray 1110111
 - week17 🔴 Bible ?????? Pray ??????1
 - week18 🔴 Bible 111100 Pray 11100??
-- week19 Bible 1110 Pray 011
+- week19 ✔️ Bible 1110111 Pray 0110101
 - week20
 - week21
 - week22
@@ -116,7 +116,7 @@ tags:
 - week16 ✔️ 跑步 00000
 - week17 🔴 跑步 00001
 - week18 ✔️ 跑步 11100
-- week19 ✔️ 跑步 001
+- week19 ✔️ 跑步 0010010（夏天也开始雾霾了）
 - week20 
 - week21 
 - week22 
@@ -164,13 +164,13 @@ tags:
 - week16 🔴 no progress
 - week17 ✔️ Tuesday
 - week18 🔴 no progress
-- week19 ✔️ 周一学会侧方停车，周二学会坡道停车+S弯+窄路掉头
+- week19 ✔️ 周一学会侧方停车，周二学会坡道停车+S弯+窄路掉头 \| 体检
 - week20
 - week21
 
 ### 2.保持财务健康
 
-- 还掉最后两笔债务：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
+- 今年经济不好，尽快把债务还清：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
 - 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 - 交易原则 ✔️ 
 	- Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
@@ -203,6 +203,7 @@ tags:
 - week5 干，湿，有害垃圾，猪爷爷，潜水艇，狗爷爷
 - week10 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
 - week16 下载软件洪恩识字，沐沐非常喜欢边玩边学，每天玩半个小时，认识4-6个字。
+- week19 通过洪恩识字，沐沐已经认识几十个字了。
 
 
 ---
@@ -323,7 +324,8 @@ tags:
 - week15 ✔️ 开始上 udemy 的课程
 - week16 ✔️ 上了2节 udemy 的课程
 - week17-18 🔴 no progress
-- week19 ✔️ [Udemy AWS Course](https://www.udemy.com/share/102CPBAEMadldSRn8J/) Chapter 1-27
+- week19 ✔️ [Udemy AWS Course: EC2](https://www.udemy.com/share/102CPBAEMadldSRn8J/) Chapter 1-37
+- week20 [Udemy AWS Course: EBS](https://www.udemy.com/share/102CPBAEMadldSRn8J/)
 
 
 
@@ -344,7 +346,7 @@ tags:
 - week16 🔴 no progress
 - week17 🔴 no progress
 - week18 🔴 no progress
-- week19
+- week19 🔴 no progress
 - week20
 - week21
 - week22 
