--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -8,10 +8,7 @@ tags:
   -
 ---
 
-以下是我2020年的计划，分了五个主题按照优先级从高到低排序：信仰，健康，家庭，职场，教会。
-
-主题是“探索”。
-
+2020年的计划，分了五个板块按照优先级从高到低排序：信仰，健康，家庭，职场，教会。
 
 
 ## Faith
@@ -57,8 +54,8 @@ tags:
 - week17 🔴 Bible ?????? Pray ??????1
 - week18 🔴 Bible 111100 Pray 11100??
 - week19 ✔️ Bible 1110111 Pray 0110101
-- week20
-- week21
+- week20 太忙了，我都不知道我干了啥
+- week21 🔴
 - week22
 - week23
 - week24
@@ -117,8 +114,8 @@ tags:
 - week17 🔴 跑步 00001
 - week18 ✔️ 跑步 11100
 - week19 ✔️ 跑步 0010010（夏天也开始雾霾了）
-- week20 
-- week21 
+- week20 本周忘记复盘了
+- week21 ✔️ 跑步 0100010
 - week22 
 - week23 
 - week24 
@@ -165,8 +162,9 @@ tags:
 - week17 ✔️ Tuesday
 - week18 🔴 no progress
 - week19 ✔️ 周一学会侧方停车，周二学会坡道停车+S弯+窄路掉头 \| 体检
-- week20
-- week21
+- week20 ✔️ 周六复习了所有学过的东西
+- week21 no progress
+- week22 ✔️ 约到了科一
 
 ### 2.保持财务健康
 
@@ -174,7 +172,7 @@ tags:
 - 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
 - 交易原则 ✔️ 
 	- Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
-	- Rule2: 以后不再向别人推荐 ETF和股票，涨涨跌跌，勾人心魂，太害人了。
+	- Rule2: 以后不再向别人推荐 ETF 和股票，涨涨跌跌，勾人心魂，太害人了。
 	- 若违背以上原则，刘小坤重重的用管教杖责打二次。
 
 ### 3.每个季度回济南看望爷爷奶奶和爸爸妈妈
@@ -231,9 +229,9 @@ tags:
 - week17 🔴 team meeting
 - week18 🔴 team meeting
 - week19 🔴 team meeting
-- week20 
-- week21 
-- week22 
+- week20 🔴
+- week21 🔴
+- week22 ✔️ team meeting, integration meeting with Joseph
 - week23 
 - week24 
 - week25 
@@ -292,9 +290,9 @@ tags:
 - week16 ✔️ implement a gem [beta_feature](https://github.com/helloworld1812/beta_feature) as [feature flag](https://martinfowler.com/articles/feature-toggles.html).
 - week17 ✔️ WOTC
 - week18 ✔️ ruby gem: beta_feature
-- week19
-- week20
-- week21
+- week19 忘记复盘了，不知道干了啥
+- week20 忘记复盘了，不知道干了啥
+- week21 ✔️ release wotc module to production
 - week22 
 - week23 
 - week24 
@@ -325,8 +323,9 @@ tags:
 - week16 ✔️ 上了2节 udemy 的课程
 - week17-18 🔴 no progress
 - week19 ✔️ [Udemy AWS Course: EC2](https://www.udemy.com/share/102CPBAEMadldSRn8J/) Chapter 1-37
-- week20 [Udemy AWS Course: EBS](https://www.udemy.com/share/102CPBAEMadldSRn8J/)
-
+- week20 ✔️[Udemy AWS Course: EBS](https://www.udemy.com/share/102CPBAEMadldSRn8J/)
+- week21 ✔️[Udemy AWS Course: RDS](https://www.udemy.com/share/102CPBAEMadldSRn8J/) 
+- week22 ✔️ Udemy AWS Course: Route53
 
 
 
@@ -347,9 +346,9 @@ tags:
 - week17 🔴 no progress
 - week18 🔴 no progress
 - week19 🔴 no progress
-- week20
-- week21
-- week22 
+- week20 🔴 no progress
+- week21 🔴 no progress
+- week22 🔴 no progress
 - week23 
 - week24 
 - week25 
@@ -421,7 +420,7 @@ Objective
 	- 2020-03-13 《吕小荣的股票交易原则》✔️
 		- 文章名字起的不好，自己又不是啥投资名人，who care 
 	- Apr. 🔴 no progress
-	- May.
+	- May. 2020-05-16《教小朋友识字》✔️
 	- June.
 	- July.
 	- Aug.
@@ -490,12 +489,13 @@ Objective
 
 - week5 因为疫情，无法聚会。培训教会同工使用 Zoom 来主持周日敬拜。
 
-### 4.和教会的 Vincent 聊聊天
+<!---### 4.和教会的 Vincent 聊聊天
 
 可以请他来家里吃饭，不做硬性计划，聊到哪算哪。 
 
 - 2020-01-13 ✔️ 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。
 - 2020-05-03 ✔️ 在滨江大道散步
+-->
 
 2020 年能做到 70% 就算圆满完成任务了。为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
 
