update weekly review

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -54,12 +54,12 @@ tags:
 - week17 🔴 Bible ?????? Pray ??????1
 - week18 🔴 Bible 111100 Pray 11100??
 - week19 ✔️ Bible 1110111 Pray 0110101
-- week20 太忙了，我都不知道我干了啥
-- week21 🔴
-- week22
-- week23
-- week24
-- week25
+- week20 ? 太忙了，没空反思我干了啥
+- week21 ? 太忙了，没空反思我干了啥
+- week22 ?  太忙了，没空反思我干了啥
+- week23 🔴 Bible 10 Pray 0
+- week24 🔴 Bible 11 Pray 11 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
+- week25 Bible 11 Pray 11
 - week26
 - week27
 - week28
@@ -115,11 +115,11 @@ tags:
 - week18 ✔️ 跑步 11100
 - week19 ✔️ 跑步 0010010（夏天也开始雾霾了）
 - week20 本周忘记复盘了
-- week21 ✔️ 跑步 0100010
-- week22 
-- week23 
-- week24 
-- week25 
+- week21 ✔️ 跑步 0100011
+- week22 ? 跑步似乎完成了
+- week23 ✔️跑步 两次
+- week24 ✔️跑步 0101
+- week25 跑步 10
 - week26 
 - week27
 - week28
@@ -165,6 +165,10 @@ tags:
 - week20 ✔️ 周六复习了所有学过的东西
 - week21 no progress
 - week22 ✔️ 约到了科一
+- week23 周三科一考试 \｜ 练了一次车
+- week24 周五下午练车一次 5 hour
+- week25
+- week26
 
 ### 2.保持财务健康
 
@@ -178,7 +182,7 @@ tags:
 ### 3.每个季度回济南看望爷爷奶奶和爸爸妈妈
 
 - Quarter 1 ✔️
-- Quarter 2
+- Quarter 2 🔴 回家之后会影响随申码，暂时不敢回家
 - Quarter 3
 - Quarter 4
 
@@ -202,7 +206,8 @@ tags:
 - week10 沐沐对故事/绘画/英文的领悟力极高，要加大这方面的时间投入
 - week16 下载软件洪恩识字，沐沐非常喜欢边玩边学，每天玩半个小时，认识4-6个字。
 - week19 通过洪恩识字，沐沐已经认识几十个字了。
-
+- week23 后面的字越来越复杂，沐沐学习汉字开始吃力起来。
+- week24 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。
 
 ---
 
@@ -229,11 +234,11 @@ tags:
 - week17 🔴 team meeting
 - week18 🔴 team meeting
 - week19 🔴 team meeting
-- week20 🔴
-- week21 🔴
+- week20 ?
+- week21 ?
 - week22 ✔️ team meeting, integration meeting with Joseph
-- week23 
-- week24 
+- week23 ✔️ team meeting / Integration meeting with Sarah
+- week24 ✔️ team meeting / meeting with Elleine
 - week25 
 - week26 
 - week27
@@ -293,16 +298,14 @@ tags:
 - week19 忘记复盘了，不知道干了啥
 - week20 忘记复盘了，不知道干了啥
 - week21 ✔️ release wotc module to production
-- week22 
-- week23 
+- week22 ✔️ w4 module and wotc module
+- week23 ✔️ w4 module and wotc module
 - week24 
 - week25 
 - week26 
 - week27
 - week28
 - week29 
-
-
 
 ### 2.考个 AWS Certified Solutions Architect 证书。
 
@@ -326,8 +329,9 @@ tags:
 - week20 ✔️[Udemy AWS Course: EBS](https://www.udemy.com/share/102CPBAEMadldSRn8J/)
 - week21 ✔️[Udemy AWS Course: RDS](https://www.udemy.com/share/102CPBAEMadldSRn8J/) 
 - week22 ✔️ Udemy AWS Course: Route53
-
-
+- week23 ✔️Udemy AWS Course: ELB
+- week24 ✔️Udemy AWS Course: S3
+- week25 S3 + CORS
 
 ### 3.打磨前端能力，达到初级前端程序员的水平。
 
@@ -349,36 +353,15 @@ tags:
 - week20 🔴 no progress
 - week21 🔴 no progress
 - week22 🔴 no progress
-- week23 
-- week24 
+- week23 🔴 no progress
+- week24 🔴 no progress
 - week25 
 - week26 
 - week27
 - week28
 - week29 
 
-
-
-### 4.每个月和一个老朋友打电话（或吃饭），叙叙旧。
-
-这是我在 Workstream 入职一周内学到的技巧。有很多知名的 VC/CEO/CTO 都是 Workstream 的 advisor。听听他们对这个世界的看法，兼听则明。
-
-- Jan. Talk with Sam Qiu. ✔️
-- Feb. Had a podcast with Python 大妈 & 张烁 ✔️
-- Mar. 🔴 failed
-- Apr. 🔴 failed 
-- May. 2020-05-06 和锦森闲扯家常，他成家了。
-- June.
-- July.
-- Aug.
-- Sept.
-- Oct.
-- Nov.
-- Dec.
-
-
-
-### 5.提高自己远程办公的能力
+### 4.提高自己远程办公的能力
 
 Objective
 
@@ -393,10 +376,8 @@ Objective
 - 20:00-21:00 跑步 & 拉伸 (晚饭要少吃一点，这样跑步才不会胃难受）
 - 21:30-22:00 吕蓝文祷告会
 - 22:30-23:00 睡觉
-	
-	
 
-### 6.业余爱好探索
+### 5.业余爱好探索
 
 - 组织 Ruby 上海地区的线下聚会
 
@@ -441,6 +422,8 @@ Objective
 
 - 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中
 
+- 学术造假数据库，给少灵用用看。
+
 - Flash Card
 	- [发现一个很棒的闪卡在医学领域的落地 HLT](https://builtbyhlt.com/)
 
@@ -456,8 +439,8 @@ Objective
 - 2020-01-19 ✔️ 周六晚上请 Seven/Allen/小蓝夫妇/若郎来家里吃饭，并给若郎设置家长控制密码，帮助她戒网瘾。
 - 2020-03-28 ✔️ 疫情解除，请小蓝夫妇/若郎/向文来家里吃火锅。
 - 2020-04-04 ✔️ 晓晓，向文，若郎来我家过生日，三个人居然生在一周，难得。坤叔一家，Sara 也来了。
-- May.
-- June.
+- May. 🔴 忙着学车，周六周日要把工作补回来，所以暂停了很久。
+- June. 2020-06-13 ✔️ 请坤叔，葡萄，小崔，果果来家里，给妈妈们放半天假。
 - July.
 - Aug.
 - Sept.
@@ -474,7 +457,7 @@ Objective
 - Feb. 🔴 failed due to COVID-19
 - Mar. 🔴 failed due to COVID-19
 - Apr. 🔴 failed
-- May.
+- May. 🔴 failed
 - June.
 - July.
 - Aug.
@@ -483,7 +466,27 @@ Objective
 - Nov.
 - Dec.
 	
-### 3.在教会的服侍
+	
+### 3.每个月和一个老朋友打电话（或吃饭），随便聊聊天。
+
+
+- Jan. Talk with Sam Qiu. ✔️
+- Feb. Had a podcast with Python 大妈 & 张烁 ✔️
+- Mar. 🔴 failed
+- Apr. 🔴 failed 
+- May. 2020-05-06 和锦森闲扯家常，他成家了。
+- June. 
+	- 2020-06-05 Allen Long 请教我远程办公事情
+	- 2020-06-06 和杨阳随便聊天
+	- 2020-06-1? 和少灵闲聊学术不端的问题
+- July.
+- Aug.
+- Sept.
+- Oct.
+- Nov.
+- Dec.
+
+### 4.在教会的服侍
 
 继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。  
 
