wrap up last week

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -59,7 +59,7 @@ tags:
 - week22 ?  太忙了，没空反思我干了啥
 - week23 🔴 Bible 10 Pray 0
 - week24 🔴 Bible 11 Pray 11 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
-- week25 Bible 11 Pray 11
+- week25 Bible 1111100 Pray 1111100 小组大地震，花了很多时间安慰人，再次感受到弟兄姐妹的爱。回溯请看日记。
 - week26
 - week27
 - week28
@@ -117,9 +117,9 @@ tags:
 - week20 本周忘记复盘了
 - week21 ✔️ 跑步 0100011
 - week22 ? 跑步似乎完成了
-- week23 ✔️跑步 两次
-- week24 ✔️跑步 0101
-- week25 跑步 10
+- week23 ✔️ 跑步 两次
+- week24 ✔️ 跑步 0101
+- week25 ✔️ 跑步 11 游泳 001
 - week26 
 - week27
 - week28
@@ -167,7 +167,7 @@ tags:
 - week22 ✔️ 约到了科一
 - week23 周三科一考试 \｜ 练了一次车
 - week24 周五下午练车一次 5 hour
-- week25
+- week25 周五模拟考，周六考试，科目二通过, yeah!
 - week26
 
 ### 2.保持财务健康
@@ -186,6 +186,21 @@ tags:
 - Quarter 3
 - Quarter 4
 
+### [增补] 每周给爷爷奶奶打个电话
+
+- week25 ✔️
+- week26
+
+
+### [增补] 每个月给爷爷奶奶寄送10张照片
+
+- June.
+- July.
+- Aug.
+- Sept.
+- Oct.
+- Nov.
+- Dec.
 
 ### 3.教沐沐英文
 
@@ -207,7 +222,8 @@ tags:
 - week16 下载软件洪恩识字，沐沐非常喜欢边玩边学，每天玩半个小时，认识4-6个字。
 - week19 通过洪恩识字，沐沐已经认识几十个字了。
 - week23 后面的字越来越复杂，沐沐学习汉字开始吃力起来。
-- week24 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。
+- week24 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。 
+- week25 突破 200 个汉字了，yeah!
 
 ---
 
@@ -239,7 +255,7 @@ tags:
 - week22 ✔️ team meeting, integration meeting with Joseph
 - week23 ✔️ team meeting / Integration meeting with Sarah
 - week24 ✔️ team meeting / meeting with Elleine
-- week25 
+- week25 🔴
 - week26 
 - week27
 - week28
@@ -301,7 +317,7 @@ tags:
 - week22 ✔️ w4 module and wotc module
 - week23 ✔️ w4 module and wotc module
 - week24 
-- week25 
+- week25 ✔️check the db issue.
 - week26 
 - week27
 - week28
@@ -329,9 +345,13 @@ tags:
 - week20 ✔️[Udemy AWS Course: EBS](https://www.udemy.com/share/102CPBAEMadldSRn8J/)
 - week21 ✔️[Udemy AWS Course: RDS](https://www.udemy.com/share/102CPBAEMadldSRn8J/) 
 - week22 ✔️ Udemy AWS Course: Route53
-- week23 ✔️Udemy AWS Course: ELB
-- week24 ✔️Udemy AWS Course: S3
-- week25 S3 + CORS
+- week23 ✔️ Udemy AWS Course: ELB
+- week24 ✔️ Udemy AWS Course: S3
+- week25 ✔️ Udemy AWS Course: S3 + CORS
+- week26 
+- week27
+- week28
+- week29 
 
 ### 3.打磨前端能力，达到初级前端程序员的水平。
 
@@ -355,7 +375,7 @@ tags:
 - week22 🔴 no progress
 - week23 🔴 no progress
 - week24 🔴 no progress
-- week25 
+- week25 🔴 no progress
 - week26 
 - week27
 - week28
@@ -419,6 +439,8 @@ Objective
 - 小朋友打疫苗日历提醒小助手
 
 - 微信小程序：保单管家
+
+- 微信小程序：约饭助手，帮助教会内的弟兄姐妹约饭，互相认识，然后在 tower 中建一个
 
 - 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中
 
