--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -59,7 +59,7 @@ tags:
 - week22 ?  太忙了，没空反思我干了啥
 - week23 🔴 Bible 10 Pray 0
 - week24 🔴 Bible 11 Pray 11 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
-- week25 Bible 1111100 Pray 1111100 小组大地震，花了很多时间安慰人，再次感受到弟兄姐妹的爱。回溯请看日记。
+- week25 Bible 1111100 Pray 1111100 小组大地震，花了很多时间安慰人，修补关系。被李燕，小蓝，李帅 的patience 激励到。
 - week26
 - week27
 - week28
@@ -168,7 +168,14 @@ tags:
 - week23 周三科一考试 \｜ 练了一次车
 - week24 周五下午练车一次 5 hour
 - week25 周五模拟考，周六考试，科目二通过, yeah!
-- week26
+- week26 
+- week27
+- week28
+- week29 
+- week30 
+- week31 
+- week32 
+- week33
 
 ### 2.保持财务健康
 
@@ -224,6 +231,14 @@ tags:
 - week23 后面的字越来越复杂，沐沐学习汉字开始吃力起来。
 - week24 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。 
 - week25 突破 200 个汉字了，yeah!
+- week26 
+- week27
+- week28
+- week29 
+- week30 
+- week31 
+- week32 
+- week33 
 
 ---
 
@@ -290,7 +305,7 @@ tags:
 
 ## Work
 
-### 1.成就 Workstream, 也让它成就自己。
+### 1. 努力成就 Workstream。
 
 在薄荷的时候，有 CTO 亲自带着我，我在他搭的架子下完成各个组件(microservice) 的开发。在 SAP Jam 的时候，温哥华的架构师敲定技术选型。整个职业生涯，我都被"保护"的很好。
 
@@ -302,8 +317,8 @@ tags:
 - 能不能写好 Golang / Python / JavaScript?
 - 能不能承载2000万的流量?
 
+不要把自己仅仅当作一个员工，努力成就 workstream，也让它成就我自己。
 
-激动人心且充满压力。
 
 - week5 ✔️ Short Link service / Build a Jenkins
 - week8 ✔️ Enable HTTP/2 / NewRelic SPA monitoring
