update weekly plan

--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -59,8 +59,8 @@ tags:
 - week22 ?  太忙了，没空反思我干了啥
 - week23 🔴 Bible 10 Pray 0
 - week24 🔴 Bible 11 Pray 11 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
-- week25 Bible 1111100 Pray 1111100 小组大地震，花了很多时间安慰人，修补关系。被李燕，小蓝，李帅 的patience 激励到。
-- week26
+- week25 ✔️ Bible 1111100 Pray 1111100 小组大地震，花了很多时间安慰人，修补关系。被李燕，小蓝，李帅 的 patience 激励到。
+- week26 ✔️ Bible 1111010 Pray 111111？
 - week27
 - week28
 - week29
@@ -120,7 +120,7 @@ tags:
 - week23 ✔️ 跑步 两次
 - week24 ✔️ 跑步 0101
 - week25 ✔️ 跑步 11 游泳 001
-- week26 
+- week26 🔴 周四-周六全家去莫干山旅游了，周日发烧。无法跑步。
 - week27
 - week28
 - week29 
@@ -168,7 +168,7 @@ tags:
 - week23 周三科一考试 \｜ 练了一次车
 - week24 周五下午练车一次 5 hour
 - week25 周五模拟考，周六考试，科目二通过, yeah!
-- week26 
+- week26 🔴 no progress
 - week27
 - week28
 - week29 
@@ -181,10 +181,13 @@ tags:
 
 - 今年经济不好，尽快把债务还清：欠吕林哥哥(5万)和刘小磊妹妹的钱(7万)
 - 每月定投香港盈富基金(2800)和纳斯达克指数基金(QQQ)
-- 交易原则 ✔️ 
-	- Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
-	- Rule2: 以后不再向别人推荐 ETF 和股票，涨涨跌跌，勾人心魂，太害人了。
-	- 若违背以上原则，刘小坤重重的用管教杖责打二次。
+
+> 交易原则  
+> 
+> Rule1: 只有在发工资的当天（节假日延后）交易股票和基金。其他时间不主动看指数，不主动看股价，不打开任何交易软件，不主动打开任何财经类公众号。
+> 
+> Rule2: 以后不再向别人推荐 ETF 和股票，涨涨跌跌，勾人心魂，太害人了。
+> 若违背以上原则，刘小坤重重的用管教杖责打二次。
 
 ### 3.每个季度回济南看望爷爷奶奶和爸爸妈妈
 
@@ -196,8 +199,14 @@ tags:
 ### [增补] 每周给爷爷奶奶打个电话
 
 - week25 ✔️
-- week26
-
+- week26 🔴
+- week27
+- week28
+- week29 
+- week30 
+- week31 
+- week32 
+- week33
 
 ### [增补] 每个月给爷爷奶奶寄送10张照片
 
@@ -231,7 +240,7 @@ tags:
 - week23 后面的字越来越复杂，沐沐学习汉字开始吃力起来。
 - week24 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。 
 - week25 突破 200 个汉字了，yeah!
-- week26 
+- week26 开始学洪恩识字 200-600 汉字包
 - week27
 - week28
 - week29 
@@ -239,6 +248,11 @@ tags:
 - week31 
 - week32 
 - week33 
+
+### [增补？] 每半年带全家人出去旅游一次
+
+- week26 周四-周六：关关/吴琼/若郎/向文/刘小坤/吕小荣 去莫干山旅游。
+
 
 ---
 
@@ -363,7 +377,7 @@ tags:
 - week23 ✔️ Udemy AWS Course: ELB
 - week24 ✔️ Udemy AWS Course: S3
 - week25 ✔️ Udemy AWS Course: S3 + CORS
-- week26 
+- week26 🔴 no progress （全家出游)
 - week27
 - week28
 - week29 
@@ -391,7 +405,7 @@ tags:
 - week23 🔴 no progress
 - week24 🔴 no progress
 - week25 🔴 no progress
-- week26 
+- week26 🔴 no progress
 - week27
 - week28
 - week29 
@@ -455,7 +469,7 @@ Objective
 
 - 微信小程序：保单管家
 
-- 微信小程序：约饭助手，帮助教会内的弟兄姐妹约饭，互相认识，然后在 tower 中建一个
+- ~~随机约饭助手，帮助教会内的弟兄姐妹约饭，互相认识，发送日历提醒，发送微信提醒。中国怎么没有出现过本土的优秀的教会管理软件？(在群里调研了一下，大家说缺的是时间，而不是工具，而且响应这个活动的人数寥寥，看来不是刚需）~~
 
 - 写个微信小程序，可以把微信文章同步到自己的 GTD 软件 Things 中
 
@@ -529,7 +543,7 @@ Objective
 
 - week5 因为疫情，无法聚会。培训教会同工使用 Zoom 来主持周日敬拜。
 
-<!---### 4.和教会的 Vincent 聊聊天
+<!---### 5.和教会的 Vincent 聊聊天
 
 可以请他来家里吃饭，不做硬性计划，聊到哪算哪。 
 
