--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -59,9 +59,9 @@ tags:
 - week22 ?  太忙了，没空反思我干了啥
 - week23 🔴 Bible 10 Pray 0
 - week24 🔴 Bible 11 Pray 11 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
-- week25 ✔️ Bible 1111100 Pray 1111100 小组大地震，花了很多时间安慰人，修补关系。被李燕，小蓝，李帅 的 patience 激励到。
+- week25 ✔️ Bible 1111100 Pray 1111100 小组大地震，花了很多时间修补关系。被李燕，小蓝，李帅 的 patience 激励到。
 - week26 ✔️ Bible 1111010 Pray 111111？
-- week27
+- week27 ✔️ Bible 1110111 Pray 1101111 开始读《宗教情感》，顺带搞明白了圣洁的概念。
 - week28
 - week29
 - week30
@@ -121,7 +121,7 @@ tags:
 - week24 ✔️ 跑步 0101
 - week25 ✔️ 跑步 11 游泳 001
 - week26 🔴 周四-周六全家去莫干山旅游了，周日发烧。无法跑步。
-- week27
+- week27 ✔️ 跑步 0100010  周三和沐沐一起跑步3km，exciting。周四买了一条可以放下 iPhone 11 的马拉松短裤，只有99元，非常喜欢。
 - week28
 - week29 
 - week30 
@@ -169,8 +169,8 @@ tags:
 - week24 周五下午练车一次 5 hour
 - week25 周五模拟考，周六考试，科目二通过, yeah!
 - week26 🔴 no progress
-- week27
-- week28
+- week27 no progress is the plan （周六补工作时间，把前两周请的假补回来)
+- week28 no progress is the plan （周六补工作时间，把前两周请的假补回来)
 - week29 
 - week30 
 - week31 
@@ -199,8 +199,8 @@ tags:
 ### [增补] 每周给爷爷奶奶打个电话
 
 - week25 ✔️
-- week26 🔴
-- week27
+- week26 🔴 打不通
+- week27 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
 - week28
 - week29 
 - week30 
@@ -208,9 +208,9 @@ tags:
 - week32 
 - week33
 
-### [增补] 每个月给爷爷奶奶寄送10张照片
+### [增补] 每个月给爷爷奶奶寄送 5 张照片
 
-- June.
+- June. ✔️ 2020-07-02 把莫干山的照片打印出来寄回去了。
 - July.
 - Aug.
 - Sept.
@@ -241,7 +241,7 @@ tags:
 - week24 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。 
 - week25 突破 200 个汉字了，yeah!
 - week26 开始学洪恩识字 200-600 汉字包
-- week27
+- week27 
 - week28
 - week29 
 - week30 
@@ -249,7 +249,12 @@ tags:
 - week32 
 - week33 
 
-### [增补？] 每半年带全家人出去旅游一次
+### 8. [增补] 教沐沐数学
+
+- week27 开始学习洪恩数学中的 1-5，大小，高矮
+
+
+### 9. [增补？] 每半年带全家人出去旅游一次
 
 - week26 周四-周六：关关/吴琼/若郎/向文/刘小坤/吕小荣 去莫干山旅游。
 
@@ -285,8 +290,8 @@ tags:
 - week23 ✔️ team meeting / Integration meeting with Sarah
 - week24 ✔️ team meeting / meeting with Elleine
 - week25 🔴
-- week26 
-- week27
+- week26 🔴
+- week27 ✔️ team meeting / meeting with Janina
 - week28
 - week29 
 - week30 
@@ -345,10 +350,10 @@ tags:
 - week21 ✔️ release wotc module to production
 - week22 ✔️ w4 module and wotc module
 - week23 ✔️ w4 module and wotc module
-- week24 
+- week24 ? 忘记了
 - week25 ✔️check the db issue.
-- week26 
-- week27
+- week26 ? 忘记了
+- week27 ✔️ 重构 onboarding modules
 - week28
 - week29 
 
@@ -378,7 +383,7 @@ tags:
 - week24 ✔️ Udemy AWS Course: S3
 - week25 ✔️ Udemy AWS Course: S3 + CORS
 - week26 🔴 no progress （全家出游)
-- week27
+- week27 ✔️ CloudFront + S3
 - week28
 - week29 
 
@@ -406,7 +411,7 @@ tags:
 - week24 🔴 no progress
 - week25 🔴 no progress
 - week26 🔴 no progress
-- week27
+- week27 🔴 no progress
 - week28
 - week29 
 
@@ -451,7 +456,7 @@ Objective
 		- 文章名字起的不好，自己又不是啥投资名人，who care 
 	- Apr. 🔴 no progress
 	- May. 2020-05-16《教小朋友识字》✔️
-	- June.
+	- June. 🔴 no progress
 	- July.
 	- Aug.
 	- Sept.
@@ -493,7 +498,8 @@ Objective
 - 2020-03-28 ✔️ 疫情解除，请小蓝夫妇/若郎/向文来家里吃火锅。
 - 2020-04-04 ✔️ 晓晓，向文，若郎来我家过生日，三个人居然生在一周，难得。坤叔一家，Sara 也来了。
 - May. 🔴 忙着学车，周六周日要把工作补回来，所以暂停了很久。
-- June. 2020-06-13 ✔️ 请坤叔，葡萄，小崔，果果来家里，给妈妈们放半天假。
+- 2020-06-13 ✔️ 请坤叔，葡萄，小崔，果果来家里，给妈妈们放半天假。
+- 2020-06-18 ✔️ 钱岩姐妹来我家吃晚饭，让我帮忙升级电脑，装软件，磁盘扩容。
 - July.
 - Aug.
 - Sept.
@@ -511,7 +517,7 @@ Objective
 - Mar. 🔴 failed due to COVID-19
 - Apr. 🔴 failed
 - May. 🔴 failed
-- June.
+- June. 
 - July.
 - Aug.
 - Sept.
@@ -544,6 +550,8 @@ Objective
 继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。  
 
 - week5 因为疫情，无法聚会。培训教会同工使用 Zoom 来主持周日敬拜。
+- 写了一份计划书 "主动关心，彼此委身“，Nancy/Severn/李帅/小梅报名了。
+- 建立了很多微信兴趣小组，让彼此有个交集。
 
 <!---### 5.和教会的 Vincent 聊聊天
 
