--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -59,7 +59,7 @@ tags:
 - week22 ?  太忙了，没空反思我干了啥
 - week23 🔴 Bible 10 Pray 0
 - week24 🔴 Bible 11 Pray 11 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
-- week25 ✔️ Bible 1111100 Pray 1111100 小组大地震，花了很多时间修补关系。被李燕，小蓝，李帅 的 patience 激励到。
+- week25 ✔️ Bible 1111100 Pray 1111100 小组大地震，花了很多时间修补关系。被李燕，小蓝，李帅 的 patience 激励到。但更多的是无力感，受挫，糟糕情绪的反复。
 - week26 ✔️ Bible 1111010 Pray 111111？
 - week27 ✔️ Bible 1110111 Pray 1101111 开始读《宗教情感》，顺带搞明白了圣洁的概念。
 - week28
@@ -241,7 +241,7 @@ tags:
 - week24 开始教沐沐用笔写字。沐沐已经认识 195 个汉字了，yeah! 马上突破200了。 
 - week25 突破 200 个汉字了，yeah!
 - week26 开始学洪恩识字 200-600 汉字包
-- week27 
+- week27 字越来越难，速度开始放慢了。
 - week28
 - week29 
 - week30 
@@ -487,7 +487,12 @@ Objective
 
 ---
 
-## Church
+## 祝福到别人
+
+不要忙于做事情，让身心俱疲；也不要流于形式，忘记了关心别人的初心。
+
+目地很重要，也记得欣赏沿途的美景。
+
 
 ### 1.开放家庭
 
@@ -545,13 +550,49 @@ Objective
 - Nov.
 - Dec.
 
-### 4.在教会的服侍
+### 4. 送别人有帮助的书籍
+
+1. 若有人对圣经感兴趣，寄送圣经给他们，若预算充足，选一些包装精美的NIV版本，这样他们不会轻易扔掉。
+	- Python 大妈
+
+2. 如果朋友结婚，送他们《爱的五种语言》。
+	- Ben@workstream
+
+3. 如果朋友生小孩，送他们花王尿布和《子女心，父母情》
+	- 韬哥（8月底）
+
+4. 其他
+	- 送若郎《成功，目标与动机》《欲罢不能》
+
+
+### 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
+
+- 2020-07-10: 2020年小组计划，第一次沟通 (TODO)
+- 2020-09: 第三季度沟通 (TODO)
+- 2020-12: 第四季度沟通 (TODO)
+
+### 6. 带领3次小组读经，3次小组祷告会。
+
+### 7. 长期和一个年轻人（向文）保持连接。
+
+若可以，提供帮助，或获得帮助。每周和他有一次单独的祷告会，聊聊天，知道他的想法，知道他的困难。
+
+
+### 8.在教会和小组内的其他杂七杂八的事情。
 
 继续做一些杂七杂八的，和 IT （或 automation）相关的优化流程的事情。  
 
 - week5 因为疫情，无法聚会。培训教会同工使用 Zoom 来主持周日敬拜。
 - 写了一份计划书 "主动关心，彼此委身“，Nancy/Severn/李帅/小梅报名了。
-- 建立了很多微信兴趣小组，让彼此有个交集。
+- 建立了很多微信兴趣小组，让彼此有个交集。(delegate 出去，自己并不擅长）
+
+### 9. 自己做不了的事情，不要碰，找其他人互补。
+
+- 关心陌生人。个性内向，非常不喜欢和陌生人打交道。
+- 陪伴倾听。倾听吐槽，抱怨，漫无目的的情感卸货，会很快把我吸干。反而会厌恶对方。
+- 组织活动。即使成功的组织了活动，我也会非常精疲力尽，毫无满足感。
+- 参与娱乐活动，比如游戏，电影，追剧，漫画。（但是我喜欢亲近大自然的活动）
+- 微信/Signal 中大量的沟通，让我的时间碎片化，无法深入思考，我很不喜欢。
 
 <!---### 5.和教会的 Vincent 聊聊天
 
@@ -559,6 +600,7 @@ Objective
 
 - 2020-01-13 ✔️ 在日月光吃饭，聊逻辑，感官世界，投影，RBG原理。
 - 2020-05-03 ✔️ 在滨江大道散步
+- 2020-07-07 关系没有办法继续下去了。
 -->
 
 2020 年能做到 70% 就算圆满完成任务了。为了便于复盘，罗列的比较细，每周一清晨（或周日晚上）复盘，如果完成了，就把相应的条目标记为 ✔️
