--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -59,10 +59,10 @@ tags:
 - week22 ?  太忙了，没空反思我干了啥
 - week23 🔴 Bible 10 Pray 0
 - week24 🔴 Bible 11 Pray 11 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
-- week25 ✔️ Bible 1111100 Pray 1111100 小组大地震，花了很多时间修补关系。被李燕，小蓝，李帅 的 patience 激励到。但更多的是无力感，受挫，糟糕情绪的反复。
+- week25 ✔️ Bible 1111100 Pray 1111100 小组大地震，花了很多时间修补关系。被李燕，小蓝，李帅鼓励。但更多的是无力感，受挫，糟糕情绪的反复。
 - week26 ✔️ Bible 1111010 Pray 111111？
 - week27 ✔️ Bible 1110111 Pray 1101111 开始读《宗教情感》，顺带搞明白了圣洁的概念。
-- week28
+- week28 《宗教情感》111 Pray 111 借着环境读《宗教情感》，明白了什么基督性情，什么是真勇敢？但是还是不明白福音带来的谦卑。
 - week29
 - week30
 - week31
@@ -122,7 +122,7 @@ tags:
 - week25 ✔️ 跑步 11 游泳 001
 - week26 🔴 周四-周六全家去莫干山旅游了，周日发烧。无法跑步。
 - week27 ✔️ 跑步 0100010  周三和沐沐一起跑步3km，exciting。周四买了一条可以放下 iPhone 11 的马拉松短裤，只有99元，非常喜欢。
-- week28
+- week28 跑步 100
 - week29 
 - week30 
 - week31 
@@ -505,7 +505,7 @@ Objective
 - May. 🔴 忙着学车，周六周日要把工作补回来，所以暂停了很久。
 - 2020-06-13 ✔️ 请坤叔，葡萄，小崔，果果来家里，给妈妈们放半天假。
 - 2020-06-18 ✔️ 钱岩姐妹来我家吃晚饭，让我帮忙升级电脑，装软件，磁盘扩容。
-- July.
+- 2020-07-08 ✔️ Jean 来我家探访。第一次深入聊天，居然有聊不完的话题。原来我想走的路，她都走过了。真希望能再聊一次。
 - Aug.
 - Sept.
 - Oct.
