--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -59,11 +59,11 @@ tags:
 - week22 ?  太忙了，没空反思我干了啥
 - week23 🔴 Bible 10 Pray 0
 - week24 🔴 Bible 11 Pray 11 与向文痛定思痛，决定早恢复早起，读经祷告，在早晨把最重要的事情做了。
-- week25 ✔️ Bible 1111100 Pray 1111100 小组大地震，花了很多时间修补关系。被李燕，小蓝，李帅鼓励。但更多的是无力感，受挫，糟糕情绪的反复。
+- week25 ✔️ Bible 1111100 Pray 1111100 花了很多时间修补关系。被李燕，小蓝，李帅鼓励。但更多的是无力感，受挫，糟糕情绪的反复。
 - week26 ✔️ Bible 1111010 Pray 111111？
 - week27 ✔️ Bible 1110111 Pray 1101111 开始读《宗教情感》，顺带搞明白了圣洁的概念。
-- week28 《宗教情感》111 Pray 111 借着环境读《宗教情感》，明白了什么基督性情，什么是真勇敢？但是还是不明白福音带来的谦卑。
-- week29
+- week28 《宗教情感》1111111 Pray 11111111 借着环境读《宗教情感》，明白了什么基督性情，什么是真勇敢？但是还是不明白福音带来的谦卑。
+- week29 《宗教情感》《圣洁》1111 Pray 1111
 - week30
 - week31
 - week32
@@ -122,8 +122,8 @@ tags:
 - week25 ✔️ 跑步 11 游泳 001
 - week26 🔴 周四-周六全家去莫干山旅游了，周日发烧。无法跑步。
 - week27 ✔️ 跑步 0100010  周三和沐沐一起跑步3km，exciting。周四买了一条可以放下 iPhone 11 的马拉松短裤，只有99元，非常喜欢。
-- week28 跑步 100
-- week29 
+- week28 ✔️ 跑步 1000011 这周沐沐陪我跑了两次，每次3km，沐沐太牛了。
+- week29 跑步 0100
 - week30 
 - week31 
 - week32 
@@ -171,7 +171,7 @@ tags:
 - week26 🔴 no progress
 - week27 no progress is the plan （周六补工作时间，把前两周请的假补回来)
 - week28 no progress is the plan （周六补工作时间，把前两周请的假补回来)
-- week29 
+- week29 周一学习科目三
 - week30 
 - week31 
 - week32 
@@ -201,7 +201,7 @@ tags:
 - week25 ✔️
 - week26 🔴 打不通
 - week27 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
-- week28
+- week28 ✔️ 打不通奶奶电话，只和爸爸聊了会天。
 - week29 
 - week30 
 - week31 
@@ -242,7 +242,7 @@ tags:
 - week25 突破 200 个汉字了，yeah!
 - week26 开始学洪恩识字 200-600 汉字包
 - week27 字越来越难，速度开始放慢了。
-- week28
+- week28 洪恩识字持续学习中
 - week29 
 - week30 
 - week31 
@@ -252,6 +252,12 @@ tags:
 ### 8. [增补] 教沐沐数学
 
 - week27 开始学习洪恩数学中的 1-5，大小，高矮
+- week28 开始学习洪恩数学几何图形
+- week29
+- week30 
+- week31 
+- week32 
+- week33 
 
 
 ### 9. [增补？] 每半年带全家人出去旅游一次
@@ -292,8 +298,8 @@ tags:
 - week25 🔴
 - week26 🔴
 - week27 ✔️ team meeting / meeting with Janina
-- week28
-- week29 
+- week28 🔴 team meeting
+- week29 team meeting
 - week30 
 - week31 
 - week32 
@@ -354,8 +360,8 @@ tags:
 - week25 ✔️check the db issue.
 - week26 ? 忘记了
 - week27 ✔️ 重构 onboarding modules
-- week28
-- week29 
+- week28 ✔️ module communication. (WIP)
+- week29 module communication.
 
 ### 2.考个 AWS Certified Solutions Architect 证书。
 
@@ -384,7 +390,7 @@ tags:
 - week25 ✔️ Udemy AWS Course: S3 + CORS
 - week26 🔴 no progress （全家出游)
 - week27 ✔️ CloudFront + S3
-- week28
+- week28 🔴 no progress (花了很多时间在小组的事情上）
 - week29 
 
 ### 3.打磨前端能力，达到初级前端程序员的水平。
@@ -412,7 +418,7 @@ tags:
 - week25 🔴 no progress
 - week26 🔴 no progress
 - week27 🔴 no progress
-- week28
+- week28 🔴 no progress
 - week29 
 
 ### 4.提高自己远程办公的能力
@@ -430,6 +436,8 @@ Objective
 - 20:00-21:00 跑步 & 拉伸 (晚饭要少吃一点，这样跑步才不会胃难受）
 - 21:30-22:00 吕蓝文祷告会
 - 22:30-23:00 睡觉
+
+(2020-07-13 update: 时间已经过去半年了，这一个目标因为没有可执行性，是执行力度最差的一个计划。这个烂目标就放在这里警戒自己：高高在上的目标如果不能细化，就是徒劳。）
 
 ### 5.业余爱好探索
 
@@ -457,7 +465,7 @@ Objective
 	- Apr. 🔴 no progress
 	- May. 2020-05-16《教小朋友识字》✔️
 	- June. 🔴 no progress
-	- July.
+	- July. 《教小朋友学习的一点心得》✔️
 	- Aug.
 	- Sept.
 	- Oct.
@@ -563,13 +571,17 @@ Objective
 
 4. 其他
 	- 送若郎《成功，目标与动机》《欲罢不能》
+	- 送 Derek 量化交易的书籍。不过我不赞成普通人去做量化交易，警惕乌尔冈湖效应。
 
 
 ### 5. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
 
-- 2020-07-10: 2020年小组计划，第一次沟通 (TODO)
-- 2020-09: 第三季度沟通 (TODO)
-- 2020-12: 第四季度沟通 (TODO)
+已经设定好日历了，到时候按计划讨论。
+
+- ✔️ 2020-07-10: 2020年小组计划，第一次沟通
+- 2020-09-18: 第三季度沟通
+- 2020-12-25: 第四季度沟通
+
 
 ### 6. 带领3次小组读经，3次小组祷告会。
 
