--- a/_posts/2020-07-17-please.md
+++ b/_posts/2020-07-17-please.md
@@ -36,7 +36,7 @@ tags:
 
 Could you please help me to ...?
 
-但请求和表达方式无关，允许别人拒绝，不强人所难。当别人知道拒绝我不需要承担任何代价时，他们就会相信我真的是在请求。
+但请求的核心不在表达方式，而是允许别人拒绝，不强人所难。当别人知道拒绝我不需要承担任何代价时，他们就会相信我真的是在请求。
 
 
 推荐书籍
