--- a/_posts/2020-07-17-please.md
+++ b/_posts/2020-07-17-please.md
@@ -22,9 +22,9 @@ tags:
 
 我又上去补了一刀，问沐沐：请求和命令真的只是表达方式的不同吗？沐沐沉思片刻，并不理解我的意思。
 
-在很多情况下，我们表面上是在请求别人，实则是在命令别人。当别人拒绝后，给别人惩罚，可以是钱，绩效，可以是自我伤害，也可以是让别人内疚。
+在很多情况下，我们说着请求的话，实则命令人。当别人拒绝后，就惩罚别人，可以是钱，绩效，可以是自我伤害，也可以是让别人内疚。
 
-在公司里，老板"请求大家有创业精神，多努力“，但是背地里却偷偷的统计工时，给那些兢兢业业但是按时上下班的员工更低的绩效。
+在公司里，老板"请求大家自愿加班“，但是背地里却偷偷的统计工时，给那些兢兢业业但是按时上下班的员工更低的绩效。
 
 在教会里，有人希望在某件事上获得帮助 ”大家可以帮我做某件事吗？“，当别人拒绝后，或者无动于衷时，就用一个很高的道德标准谴责大家冷漠，让每个人内疚。
 
